k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            # 这边要对应到mysql的数据存储的位置
            - mountPath: /var/lib/mysql
#             我 POD里面有那么多volumes， 我要用哪个
              name: mysql-storage
          ports:
            - containerPort: 3306
      restartPolicy: Always
#     整个POD有哪些
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-claim
